<resources>
    <string name="app_name"> National Nutrition Survey 2018 </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
    <string name="end_interview">اختتام </string>
    <string name="start_interview"> انٹروہو شروع کریں </string>
    <string name="nextSection"> اگلا سیکشن </string>
    <string name="dataShare"> ڈیٹا تقسیم </string>
    <string name="addMember"> افراد کا اندراج </string>
    <string name="saveMember"> درج کریں </string>
    <string name="istatus">انٹرویو کا نتیجہ</string>
    <string name="istatusa"> مکمل</string>
    <string name="istatusb"> گھر پرموجود نہیں</string>
    <string name="istatusc">انکار </string>
    <string name="istatusd"> جزوی مکمل </string>
    <string name="istatuse">جواب دینے سے قاصر</string>
    <string name="istatusf">گھر نہیں ملا</string>
    <string name="istatusg"> عمر کی وجہ سے نااہل </string>
    <string name="nc3response"> Response </string>
    <string name="nc3src"> Source </string>
    <string name="istatusha"> مکمل</string>
    <string name="istatushb">گھرانے کا کوئی فرد یا باصلاحیت جواب دہندہ گھر پر موجود نہیں تھا</string>
    <string name="istatushc">گھرانہ کے تمام افراد لمبے عرصے کے لیے گھر سے غیر حاضر تھے </string>
    <string name="istatushd"> انکار کردیا </string>
    <string name="istatushe">خالی گھر/گھر کا پتہ نہ تھا</string>
    <string name="istatushf">گھر نہیں ملا</string>
    <string name="istatushg">جزوی مکمل</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="male"> مرد</string>
    <string name="female"> عورت </string>
    <string name="yes"> ہاں </string>
    <string name="no"> نہیں </string>
    <string name="card">کارڈ کے مطابق</string>
    <string name="recall">ماں کے مطابق</string>
    <string name="dkn"> معلوم نہیں </string>
  <string name="dkn2"> معلوم نہیں / یاد نہیں</string>
  <string name="none">پانی گھر پر موجود ہے یا پانی گھر پر فراہم کیا جاتا ہے </string>
    <string name="nofood">ان میں سے کچھ بھی نہیں کھایا</string>
    <string name="count"> تعداد </string>
    <string name="other"> دیگر وضاحت کریں </string>
    <string name="otherpubm"> دوسرے عوامی طبی مرکز </string>
    <string name="otherprim"> دوسرے نجی دواخانہ </string>
    <string name="refused"> جواب سے انکار </string>
    <string name="never"> کبھی نہیں </string>
    <string name="rs">Rupees</string>
    <string name="week"> ہفتے </string>
    <string name="months"> مہینے </string>
    <string name="kg"> kg</string>
    <string name="times">تعداد</string>
    <string name="nr">جواب نہیں دیا</string>
    <string name="dose">خوراکیں</string>
    <string name="explain">وضاحت کریں  </string>
    <string name="na1heading"> گھرانے کی معلومات </string>
    <string name="nh101">جغرافیائی علاقہ </string>
    <string name="nh102">اینومریشن بلاک نمبر </string>
    <string name="nh102a">کلسٹر نمبر </string>
    <string name="nh103"> صوبہ </string>
    <string name="nh104"> ضلع </string>
    <string name="nh105"> تحصیل/تعلُقہ </string>
    <string name="nh106"> شہر/گاؤں </string>
    <string name="nh108"> گھرانا نمبر </string>
    <string name="checkHHpresent"> Selected Head name present (A/C Line listing) </string>
    <string name="na104"> انٹرویو لینے والے کا نام اور نمبر </string>
    <string name="nh110"> ٹیم لیڈر کا نام اور نمبر </string>
    <string name="na106"> انٹرویو کی تاریخ اور وقت </string>
    <string name="nh113"> جواب دہندہ کا نام </string>
    <string name="na107"> جواب دہندہ کا نام </string>
    <string name="nw2info">یہ حصہ ہر اُس خاتون کا بھرا جائے گا جس کی عمر 49-15 سال ہے</string>
    <string name="nh115"> جواب دہندہ کی عمر مکمل سالوں میں </string>
    <string name="nh115a"> Years </string>
    <string name="na109"> جواب دہندہ کی تعلیم </string>
    <string name="na110"> جواب دہندہ کا پیشہ </string>
    <string name="na11101blood"> خون کے نمونے لینے کے لیے </string>
    <string name="na11101urine"> پیشاب  کے نمونے لینے کے لیے </string>
    <string name="na11102water"> پانی کے معیار کو جانچنے کے لیے </string>
    <string name="na112info"> سوال کنندہ اجازت نامہ جواب دہندہ سمجھانے کے لیے پڑھ کر سنائے گا اور مطالعہ کا مقصد اور انٹرویو کے لیے درکار وقت کے متعلق آگا ہ کرےگا ۔ (سوال کنندہ کو علیحدہ سے اجازت نامہ کی شیٹ مہیا کی جائےگی) </string>
    <string name="na11801"> زبانی اجازت نامہ </string>
    <string name="na11802"> تحریری اجازت نامہ </string>
    <string name="na113info"> اگر زبانی اجازت  نہ ملے تو انٹرویو کو روک دیں اور اس سیکشن کے آخر میں سوال کے نتائج ریکارڈ کریں </string>
    <string name="na113"> انکار کی وجہ (متعلقہ جوابات کو منتخب کریں) </string>
    <string name="na119a"> نامناسب وقت </string>
    <string name="na119b"> دلچسپی نہیں </string>
    <string name="na119c"> وقت کا ضائع </string>
    <string name="na119d"> رازدار ی میں مداخلت </string>
    <string name="na119e"> سروے پر اعتبار نہیں </string>
    <string name="na119f"> پچھلا برا تجربہ </string>
    <string name="na119g"> خون اور پیشاب کے نمونے کا لینا </string>
    <string name="na2heading"> HOUSEHOLD MEMBERS </string>
    <string name="na2subHeading"> HOUSEHOLD MEMBERS DATA </string>
    <string name="na2subEditHeading"> EDIT HOUSEHOLD MEMBERS DATA </string>
    <string name="na201"> Line number </string>
    <string name="na202Info"> براہ مہربانی پہلے مجھے ان سب کانام بتائیں جو عام طور پر یہاں رہتے ہیں خاندان کے سربراہ سے شروع کریں </string>
    <string name="na202"> نام </string>
    <string name="na203a">سربراہ </string>
    <string name="na203b">خاوند/ بیوی </string>
    <string name="na203c">بیٹا / بیٹی </string>
    <string name="na203d">داماد / بہو </string>
    <string name="na203e">پوتا / پوتی / نواسا / نواسی</string>
    <string name="na203f">والدین </string>
    <string name="na203g">ساس / سسر </string>
    <string name="na203h"> بھائی / بہن </string>
    <string name="na203i">سالا / سالی / دیور / دیورانی </string>
  <string name="na203j">چچا / چچی / ماموں / ممانی / پھوپھا / پھوپھی/ خالہ/ خالو </string>
    <string name="na203k">بھانجا / بھانجی / بھتیجا / بھتیجی</string>
    <string name="na203l">دیگر رشتہ دار </string>
    <string name="na203m">سوتیلے / رضاعی / لے پالک بچے </string>
    <string name="na203n"> ملازم</string>
    <string name="na203o">یتیم </string>
    <string name="na20396">دیگر (کوئی رشتہ دار نہیں) </string>
    <string name="na20398">  معلوم نہیں </string>
    <string name="resp"> کیا یہ جواب دہندہ ہے؟</string>
    <string name="nh211"> والد کا لائن نمبر </string>
    <string name="nh212"> والدہ کا لائن نمبر </string>
    <string name="nh212a"> ماں کا نام</string>
    <string name="childname"> بچے کا نام</string>
    <string name="na204"> جنس </string>
    <string name="nh2edu"> تعلیم </string>
    <string name="nh2edua"> کوئی نہیں</string>
    <string name="nh2edub"> پری پرائمری</string>
    <string name="nh2educ"> پرائمری (5-1)</string>
    <string name="nh2edud"> مڈل(8-6)</string>
    <string name="nh2edue"> سیکنڈری(10-9)</string>
    <string name="nh2eduf"> انٹرمیڈیٹ</string>
    <string name="nh2edug"> گریجویشن </string>
    <string name="nh2eduh"> ماسٹرز </string>
    <string name="nh2edui"> پی-ایچ-ڈی</string>
    <string name="nh2occ"> پیشہ </string>
    <string name="nh2occa"> کوئی نہیں</string>
    <string name="nh2occb"> غیر ہنرمند مزدور</string>
    <string name="nh2occc"> ہنرمند مزدور</string>
    <string name="nh2occd"> زراعت سے متعلق</string>
    <string name="nh2occe"> سیل اور سروسز</string>
    <string name="nh2occf"> پروفیشنل </string>
    <string name="nh2occg"> طالب علم</string>
    <string name="nw302c"> نرس </string>
    <string name="nb4subheading">یہ حصہ ہر اُس خاتون کا بھرا جائے گا جس کی عمر 49-15 سال ہے اور گذشتہ 2 سال میں زندہ بچے کی پیدائش ہوئی ہو</string>
    <string name="nw5heading"> سیکشن ڈبلیو5: خواتین کے مختلف اقسام کے کھانوں کا استعمال </string>
    <string name="nw501a">مثلاً جو،جوار،دلیا،چاول ،شلجم ،گندم،شکرقندی،کچے کیلے، بیھ،اروی،آلو  وغیرہ </string>
  <string name="nw501b"> تمام قسم کی لوبیا ،چنا ،مٹر  ،ارد کی دال ،اور تمام دوسری دالیں </string>
  <string name="nw501d"> کم اور مکمل چکنائی والا دودھ،دودھ ،دہی،پنیر،خشک دودھ اور دودھ  کی تمام قسمیں </string>
  <string name="nw501e">گائے ،بھنس ،بکری،بھیڑ،دنبہ،مرغی،بطخ،کبوتر،مرغابی کا گوشت،مچھلی اور دوسرے تمام حلال جانوروں کا گوشت ،پوٹا،کلیجی،اوجھڑی،دل،گردہ،ڈبے میں محفوظ مچھلی،جینھگے،کیٹرا،خشک /برف میں رکھی ہوئی مچھلی</string>
    <string name="nw501f"> مرغی اور بطخ کے انڈے </string>
  <string name="nw501g">گہرے ہرے پتوں والی سبزیاں مثلاً میتھی   ،پالک، کریلا، بھنڈی، کدو ،بروکولی ،ہری مرچ ، سلاد پتہ ، گوبی ساگ ،ہرا کدو وغیرہ</string>
  <string name="nw501h"> وٹامن اے سے بھرپور پھل اور سبزیاں مثلاً خوبانی ،خربوزہ، تربوز، پپیتا،آملوک،گاجر وغیرہ</string>
    <string name="nw501i"> دوسری سبزیاں مثلاًٹماٹر ،مکئی،پھول گوبی ،بند گوبی ،تورئی،سلاد پتے ،پیاز،اجوائن،ہرا مٹر، بیگن، کھیرا وغیرہ  </string>
    <string name="nw501j">سیب،انگور،پپیتا،خوبانی،چکوترا،امرود،ناشپاتی،کیلا،انناس،جامن،لیموں،انار،تربوز،آلوبخارہ ،نارنگی،آم،آڑو وغیرہ </string>
    <string name="nc5heading"> سیکشن سی 5 : بچہ کی معذوری  </string>
    <string name="nc5info"> (صرف59-24 مہینے کے بچوں کے لیےماں سے پوچھیں ) </string>
  <string name="nc501a"> دیکھنے میں کوئی مشکل نہیں </string>
  <string name="nc501b"> دیکھنے میں کچھ مشکل ہے</string>
  <string name="nc501c"> دیکھنے میں بہت مشکل ہے </string>
  <string name="nc501d"> بلکل نہیں دیکھ سکتا </string>
  <string name="nc502a"> سننے میں کوئی مشکل نہیں </string>
  <string name="nc502b"> سننے میں کچھ مشکل ہے </string>
  <string name="nc502c"> سننے میں بہت مشکل ہے </string>
  <string name="nc502d"> بلکل نہیں سن سکتا </string>
  <string name="nc503a"> چلنے میں کوئی مشکل نہیں</string>
  <string name="nc503b"> چلنے میں کچھ مشکل ہے </string>
  <string name="nc503c"> چلنے میں بہت مشکل ہے </string>
  <string name="nc503d"> بلکل نہیں چل سکتا </string>
  <string name="nc504a"> یاد رکھنے میں کوئی مشکل نہیں</string>
  <string name="nc504b"> یاد رکھنے میں بہت مشکل ہے </string>
  <string name="nc504c"> بلکل نہیں یاد رکھ سکتا </string>
  <string name="nc504d"> بلکل نہیں یاد رکھ سکتا </string>
  <string name="nc505a"> اپنی دیکھ بھال کرنے میں کوئی مشکل نہیں </string>
  <string name="nc505b"> اپنی دیکھ بھال کرنے میں کچھ مشکل ہے </string>
  <string name="nc505d"> اپنی دیکھ بھال بلکل نہیں کر سکتا </string>
  <string name="nc506b"> بات چیت کرنے میں کوئی مشکل نہیں </string>
    <string name="nc506a"> کوئی مشکل نہیں </string>
  <string name="nc506c"> بات چیت کرنے میں بہت مشکل ہے</string>
  <string name="nc506d"> بلکل نہیں بات چیت کر سکتا </string>
  <string name="nc505c"> اپنی دیکھ بھال کرنے میں کچھ مشکل ہے </string>
    <string name="nc501">۔C501 - کیا آپ کےبچےکو دیکھنے میں مشکل پیش آتی ہے یہا ں تک کے چشمہ بھی پہنا ہو؟</string>
    <string name="nc502">۔C502 - کیا آپ کےبچےکو سننےمیں مشکل پیش آتی ہیں یہاں تک کے کانوں والی مشین لگی ہوئی ہو؟</string>
    <string name="nc503">۔C503 - کیا آپ کےبچےکو چلنے یا چڑھنے کے دوران کوئی مشکلات پیش آتی ہے؟</string>
    <string name="nc504">۔C504 - کیا آپ کےبچےکو یاد رکھنے اور توجہ دینے میں کوئی مشکلات پیش آتی ہے؟</string>
    <string name="nc505">۔C505 - کیا آپ کےبچےکو اپنے دیکھ بھال( مثلاً: ہاتھ منہ دھونا ،وغیرہ) میں مشکل پیش آتی ہے؟</string>
    <string name="nc506">۔C506 - کیااپنی روز مرہ کی زبان استعمال کرتے ہوئے آپ کےبچےکو بات چیت میں (مثلاً کسی کو بات سمجھاتے وقت یا کسی کی بات سمجھتے وقت) دشواری پیش آتی ہے ؟</string>
</resources>